# music-bot-rs

./: .gitignore  .ignore  Cargo.toml  README.md
src/: commands.rs  main.rs
