[package]
name = "music-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", features = ["client", "cache", "standard_framework", "voice", "rustls_backend"] }
reqwest = "0.11.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
songbird = { version = "0.2", features = ["serenity-rustls", "gateway", "builtin-queue"] }
base64 = "0.13.0"
iso8601 = "0.4.2"